Single user view

--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,5 @@
 <body>
   <ud-root></ud-root>
 </body>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYri3mqW3UjI0GEhC-qAvCC1lDtBJiLMM"></script>
 </html>
